updated script 2nd day

--- a/QALegend/src/test/resources/userdata.properties
+++ b/QALegend/src/test/resources/userdata.properties
@@ -7,3 +7,6 @@ signuplastname=test
 signupemail=testcompany@yopmail.com
 signuppassword=123456
 company=testingcompany
+loginuser=userjames01@yopmail.com
+loginpassword=12345678
+loginusername=User James
