Updated the code as per the discussions on 11/12 changes made in signup page and tickets page

--- a/QALegend/src/test/resources/userdata.properties
+++ b/QALegend/src/test/resources/userdata.properties
@@ -10,3 +10,5 @@ company=testingcompany
 loginuser=userjames01@yopmail.com
 loginpassword=12345678
 loginusername=User James
+bugname=TestBug
+bugdescription=TestDescription
