--- a/QALegend/pom.xml
+++ b/QALegend/pom.xml
@@ -31,6 +31,13 @@
     <artifactId>poi-ooxml</artifactId>
     <version>5.2.3</version>
 </dependency>
+
+<dependency>
+   <groupId>com.aventstack</groupId>
+        <artifactId>extentreports</artifactId>
+        <version>4.1.4</version>
+    </dependency>
+ 
   
   </dependencies>
 </project>
