--- a/QALegend/pom.xml
+++ b/QALegend/pom.xml
@@ -3,6 +3,24 @@
   <groupId>Automation</groupId>
   <artifactId>QALegend</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <build>
+  
+  <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.5.2</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+</plugins>
+  
+  
+  </build>
   <dependencies>
   <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
