--- a/QALegend/pom.xml
+++ b/QALegend/pom.xml
@@ -56,6 +56,17 @@
         <version>4.1.4</version>
     </dependency>
  
+ 
+ <dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>0.15</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version>
+		</dependency>
   
   </dependencies>
 </project>
